samples/_failures_safe/1761006543_f5b838_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7ff2c20.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_b7ff2c20.c:171:35: error: missing terminating " character
  171 |         case TOKEN_NUMBER: printf("N
      |                                   ^~
./samples/SAFE/__tmp_b7ff2c20.c:171:9: error: expected expression at end of input
  171 |         case TOKEN_NUMBER: printf("N
      |         ^~~~
./samples/SAFE/__tmp_b7ff2c20.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b7ff2c20.c:171:9: error: expected declaration or statement at end of input
